<resources>
    <string name="app_name">MVP_Hangman</string>

    <string name="gallows">The Gallows</string>
    <string name="body">body</string>
    <string name="right_hand">right hand</string>
    <string name="left_hand">left hand</string>
    <string name="right_leg">right leg</string>
    <string name="left_leg">left leg</string>
    <string name="head">head</string>
    <string name="youWin">You Win</string>
    <string name="congratulation">Congratulation</string>
    <string name="gameOver">Game Over</string>
    <string name="exit">Exit</string>
    <string name="playAgain">Play Again</string>
    <string name="answer_is">"The answer is "</string>
</resources>
