<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nick.mvp_hangman.GameActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteBackground"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/gallows"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:src="@drawable/android_hangman_gallows" />

        <ImageView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/head"
            android:paddingStart="70dp"
            android:paddingTop="18dp"
            android:src="@drawable/android_hangman_head" />

        <ImageView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/body"
            android:paddingStart="78dp"
            android:paddingTop="38dp"
            android:src="@drawable/android_hangman_body" />

        <ImageView
            android:id="@+id/arm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/body"
            android:paddingStart="80dp"
            android:paddingTop="35dp"
            android:src="@drawable/android_hangman_arm1" />

        <ImageView
            android:id="@+id/arm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/left_hand"
            android:paddingStart="65dp"
            android:paddingTop="35dp"
            android:src="@drawable/android_hangman_arm2" />

        <ImageView
            android:id="@+id/leg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/left_leg"
            android:paddingStart="65dp"

            android:paddingTop="60dp"
            android:src="@drawable/android_hangman_leg1" />

        <ImageView
            android:id="@+id/leg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/right_leg"
            android:paddingStart="80dp"
            android:paddingTop="60dp"
            android:src="@drawable/android_hangman_leg2" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ln_char"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/whiteBackground"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp"></LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/background"
        />

</LinearLayout>
</layout>